--- a/Kubernetes-Manifests-file/Backend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Backend/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api
+  name: backend
   namespace: three-tier
   labels:
-    role: api
+    role: backend
     env: demo
 spec:
   replicas: 2
@@ -15,16 +15,16 @@ spec:
       maxUnavailable: 25%
   selector:
     matchLabels:
-      role: api
+      role: backend
   template:
     metadata:
       labels:
-        role: api
+        role: backend
     spec:
       imagePullSecrets:
       - name: ecr-registry-secret
       containers:
-      - name: api
+      - name: backend
         image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/backend:2
         imagePullPolicy: Always
         env:
